--- a/css/chat.css
+++ b/css/chat.css
@@ -26,6 +26,11 @@
   animation: sentAnimation 0.6s ease-out forwards;
 }
 
+.chating .chating__avatar {
+  animation: spinMove 2s linear infinite;
+  box-shadow: 0 8px 5px #c5c5c5c0;
+}
+
 .chating__column .chating__message {
   width: fit-content;
   background-color: white;
@@ -162,5 +167,13 @@
   }
   to{
     opacity: 1;
+  }
+}
+
+@keyframes spinMove {
+  from{
+    transform: rotateY(0)
+  }to{
+    transform: rotateY(360deg);
   }
 }
